@@ -9,14 +9,12 @@ Herwig is actively developed by:
 --------------------------------------------------------------------------------
 
 Gavin Bewick
+Cody Duncan
 Silvia Ferrario Ravasio
 Stefan Gieseke
-Patrick Kirchgaeßer
 Mohammad R. Masouminia
-Graeme Nail
 Andreas Papaefstathiou
 Simon Plätzer
-Christian Reuschle
 Peter Richardson
 Mike Seymour
 Andrzej Siödmok
@@ -34,11 +32,14 @@ David Grellscheid
 Nadine Fischer
 Keith Hamilton
 Marco A. Harrendorf
+Patrick Kirchgaeßer
 Seyi Latunde-Dada
 Frashër Loshaj
+Graeme Nail
 Radek Podskubka
 Daniel Rauch
 Michael Rauch
+Christian Reuschle
 Alberto Ribon
 Christian Röhr
 Pavel Růžička
